# pdf-translator

./: .gitignore  Readme.md  pyproject.toml  requeriments.txt
pdf_translator/: __init__.py
pdf_translator/cli/: __init__.py
pdf_translator/translation/: __init__.py  except.py  impl.py  translators.py
src/: __init__.py
tests/: test_pdf_translator.py
