[tool.poetry]
name = "pdf-translator"
version = "0.1.0"
description = ""
authors = ["Jhon Fernandez <jhondev.code@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyPDF4 = "^1.27.0"
colorama = "^0.4.4"
deep-translator = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
